# sally

./: .gitignore  CHANGES  MANPAGE  Makefile.am  README  README.md  TODO  bootstrap  build  compile  configure.ac  configure.in  git2changes.py
benchmark/: matlab.m  python.py  stats_plot.py  stats_sally.sh  time_matlab.sh  time_python.sh  time_sally.sh
benchmark/data/: README  arts.cfg  arts.txt  enron.cfg  enron.txt  rfc.txt  sentences.txt  sprot.cfg  sprot.txt
benchmark/results/: matlab.time  python.time  sally.time
contrib/: Makefile.am  sally_sparsematrix.r  sally_struct2mat.m
doc/: Makefile.am  README.md  doxygen.cfg  example.cfg  latex-pre.inc.in  sally.cfg  sally.man  sally.pod
doc/plots/: plot_runtime.py
src/: Makefile.am  common.h  export.c  export.h  farray.c  farray.h  fhash.c  fhash.h  fmap.c  fmap.h  fmath.c  fmath.h  fvec.c  fvec.h  import.c  import.h  in_arc.c  in_arc.h  in_dir.c  in_dir.h  md5.c  md5.h  murmur.c  murmur.h  sally.c  sally.h  sally.h.in  sconfig.c  sconfig.h  tool.c  tool.h  util.c  util.h
src/fvec/: Makefile.am  embed.c  embed.h  fhash.c  fhash.h  fmath.c  fmath.h  fvec.c  fvec.h  norm.c  norm.h  reduce.c  reduce.h
src/input/: Makefile.am  README  README.md  input.c  input.h  input_arc.c  input_arc.h  input_dir.c  input_dir.h  input_fasta.c  input_fasta.h  input_lines.c  input_lines.h  input_stdin.c  input_stdin.h
src/libsally/: Makefile.am  fhash.c  util.h
src/output/: Makefile.am  README  README.md  output.c  output.h  output_cluto.c  output_cluto.h  output_json.c  output_json.h  output_libsvm.c  output_libsvm.h  output_list.c  output_list.h  output_matlab.c  output_matlab.h  output_scores.c  output_scores.h  output_stdout.c  output_stdout.h  output_text.c  output_text.h
tests/: Makefile.am  config1.cfg  config2.cfg  config3.cfg  test.in  test_configs.sh  test_configs.txt  test_embed.c  test_fhash.c  test_fmap.c  test_fvec.c  test_ngrams.c  test_options.sh  test_options.txt  tests.c  tests.h
