# Sally - A Library for String Features and String Kernels
# Copyright (C) 2010 Konrad Rieck (konrad@mlsec.org)

INCLUDES                = @INCLUDES@ -I$(top_srcdir)/src
TESTS                   = test_fmap
noinst_PROGRAMS         = test_fmap

test_fmap_SOURCES       = test_fmap.c tests.c tests.h
test_fmap_LDADD         = $(top_builddir)/src/libsally.la

