# Sally - A Tool for Embedding Strings in Vector Spaces
# Copyright (C) 2010 Konrad Rieck (konrad@mlsec.org)

INCLUDES                = -I$(top_srcdir)/src
EXTRA_DIST		= README

noinst_LTLIBRARIES	= libinput.la

libinput_la_SOURCES	= input.h input.c input_arc.c input_arc.h \
			  input_dir.c input_dir.h input_lines.c input_lines.h
