# Sally - A Tool for Embedding Strings in Vector Spaces
# Copyright (C) 2010 Konrad Rieck (konrad@mlsec.org)

INCLUDES                = -I$(top_srcdir)/src \
			  -I$(top_srcdir)/src/input

noinst_LTLIBRARIES	= libsally.la

libsally_la_SOURCES	= fhash.c fhash.h fvec.c fvec.h \
			  fmath.c fmath.h embed.c embed.h \
			  norm.c norm.h common.h uthash.h \
			  murmur.c murmur.h md5.c md5.h 

